--- a/views/login.html
+++ b/views/login.html
@@ -27,9 +27,9 @@
       </a>
       <nav>
         <ul class="nav-links">
-          <li><a href="#">Find Events</a></li>
-          <li><a href="#">Create Events</a></li>
-          <li><a href="#">Ad Placement</a></li>
+          <li><a href="/find-events">Find Events</a></li>
+          <li><a href="/create-events">Create Events</a></li>
+          <li><a href="/place ads">Ad Placement</a></li>
         </ul>
       </nav>
       <div class="hamburger">
@@ -38,7 +38,22 @@
         <span></span>
       </div>
     </header>
-
+    <div class="side">
+      <ul class="nav-links">
+        <li><a class="navl" href="/find-events">Find Events</a></li>
+        <li><a class="navl" href="/create-events">Create Events</a></li>
+        <li><a class="navl" href="/place-ads">Ad Placement</a></li>
+        <li>
+          <a href="/signup">
+            <button class="butt cta-button ex whit">Sign Up</button>
+          </a>
+          <a href="/login">
+            <button class="butt cta-button ex whit">Login</button>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="top">➜</div>
     <!-- Sign Up Section -->
     <section class="signup-section">
       <div class="form-container">
