--- a/views/index.html
+++ b/views/index.html
@@ -91,7 +91,7 @@
       </div>
       <div class="event-cards">
         <!-- Each event card -->
-        <div class="event-card">
+        <!-- <div class="event-card">
           <img src="3.jpg" alt="Event Image" />
           <div class="event-info">
             <h3>Music Festival</h3>
@@ -179,7 +179,7 @@
           <div class="cal">
             <a href=""><img src="cal.png" alt="" /></a>
           </div>
-        </div>
+        </div> -->
         <!-- Repeat cards dynamically -->
       </div>
     </section>
@@ -200,7 +200,7 @@
     <!-- Features Section -->
     <section class="features">
       <div class="feature">
-        <img src="2.jpg" alt="Feature Image" />
+        <img src="1.jpg" alt="Feature Image" />
         <h2>Explore Local & Global Events</h2>
         <p>
           Find events happening around the corner or across the globe, tailored
@@ -216,7 +216,7 @@
         </p>
       </div>
       <div class="feature">
-        <img src="4.jpg" alt="Feature Image" />
+        <img src="2.jpg" alt="Feature Image" />
         <h2>Stay in the Loop</h2>
         <p>
           Receive reminders and updates for events you've saved or bought
@@ -254,7 +254,7 @@
         </p>
       </div>
       <div class="event-cards">
-        <div class="event-card">
+        <!-- <div class="event-card">
           <img src="1.jpg" alt="Event Image" />
           <div class="event-info">
             <h3>Music Festival</h3>
@@ -278,7 +278,7 @@
           <div class="cal">
             <a href=""><img src="cal.png" alt="" /></a>
           </div>
-        </div>
+        </div> -->
       </div>
       <!-- Repeat hiring event cards -->
     </section>
