--- a/views/index.html
+++ b/views/index.html
@@ -31,11 +31,12 @@
           <li><a class="navl" href="/place-ads">Ad Placement</a></li>
           <li>
             <a href="/signup">
-              <button class="butt cta-button ex">Sign Up</button>
+              <button class="butt cta-button ex1">Sign Up</button>
             </a>
             <a href="/login">
-              <button class="butt cta-button ex">Login</button>
+              <button class="butt cta-button ex1">Login</button>
             </a>
+            <button class="butt cta-button ex2">Log out</button>
           </li>
         </ul>
       </nav>
@@ -52,11 +53,12 @@
         <li><a class="navl" href="/place-ads">Ad Placement</a></li>
         <li>
           <a href="/signup">
-            <button class="butt cta-button ex whit">Sign Up</button>
+            <button class="butt cta-button ex1 whit">Sign Up</button>
           </a>
           <a href="/login">
-            <button class="butt cta-button ex whit">Login</button>
+            <button class="butt cta-button ex1 whit">Login</button>
           </a>
+          <button class="butt cta-button ex2">Log out</button>
         </li>
       </ul>
     </div>
