--- a/demo/create.css
+++ b/demo/create.css
@@ -66,7 +66,7 @@ textarea:focus {
   display: none;
 }
 
-.cta-button {
+.cta-button1 {
   padding: 1rem;
   background-color: #e43d12;
   color: white;
@@ -77,7 +77,7 @@ textarea:focus {
   transition: background-color 0.3s ease;
 }
 
-.cta-button:hover {
+.cta-button1:hover {
   background-color: #c73211;
 }
 
