--- a/views/create.html
+++ b/views/create.html
@@ -45,11 +45,12 @@
         <li><a class="navl" href="/place-ads">Ad Placement</a></li>
         <li>
           <a href="/signup">
-            <button class="butt cta-button ex whit">Sign Up</button>
+            <button class="butt cta-button ex1 whit">Sign Up</button>
           </a>
           <a href="/login">
-            <button class="butt cta-button ex whit">Login</button>
+            <button class="butt cta-button ex1 whit">Login</button>
           </a>
+          <button class="butt cta-button ex2">Log out</button>
         </li>
       </ul>
     </div>
@@ -84,7 +85,10 @@
             required
           ></textarea>
         </div>
-
+        <div class="input-group">
+          <label for="detailedInfo">Detailed Information (Optional)</label>
+          <textarea id="detailedInfo" name="detailedInfo"></textarea>
+        </div>
         <!-- Event Date -->
         <div class="input-group">
           <label for="event-date">Event Date</label>
@@ -107,7 +111,16 @@
             <!-- Add more locations as needed -->
           </select>
         </div>
-
+        <div class="input-group">
+          <label for="event-address">Event Address</label>
+          <input
+            type="text"
+            id="event-address"
+            name="event-address"
+            placeholder="123 Event Street, Kaduna"
+            required
+          />
+        </div>
         <!-- Event Categories -->
         <div class="input-group">
           <label for="categories">Event Categories</label>
@@ -132,6 +145,17 @@
               ><input type="checkbox" name="categories" value="tech" />
               Technology</label
             >
+            <div class="input-group">
+              <label for="customCategory"
+                >Other Category (seperate with coma ",")</label
+              >
+              <input
+                type="text"
+                id="customCategory"
+                name="customCategory"
+                placeholder="Specify other category"
+              />
+            </div>
           </div>
         </div>
 
@@ -151,7 +175,7 @@
 
         <!-- Organizer Needs -->
         <div class="input-group">
-          <label>Are you looking for donations or professionals?</label>
+          <label>Are you looking for professionals?</label>
           <div class="radio-group">
             <label
               ><input type="radio" name="looking-for" value="no" checked />
@@ -183,6 +207,27 @@
               ><input type="checkbox" name="professionals" value="volunteers" />
               Volunteers</label
             >
+            <div class="input-group">
+              <label for="customProfessional"
+                >Other Professional(s) (seperate with coma ",")</label
+              >
+              <input
+                type="text"
+                id="customProfessional"
+                name="customProfessional"
+                placeholder="Specify other professional"
+              />
+            </div>
+            <!-- Optional Detailed Professional Information -->
+            <div class="input-group">
+              <label for="professionalDetails"
+                >More Information on Professionals Needed (Optional)</label
+              >
+              <textarea
+                id="professionalDetails"
+                name="professionalDetails"
+              ></textarea>
+            </div>
           </div>
         </div>
 
@@ -199,19 +244,18 @@
         </div>
 
         <!-- Event Address -->
+
         <div class="input-group">
-          <label for="event-address">Event Address</label>
-          <input
-            type="text"
-            id="event-address"
-            name="event-address"
-            placeholder="123 Event Street, Kaduna"
-            required
-          />
+          <label for="contactEmail">Contact Email</label>
+          <input type="email" id="contactEmail" name="contactEmail" required />
+        </div>
+        <div class="input-group">
+          <label for="contactPhone">Contact Phone Number</label>
+          <input type="tel" id="contactPhone" name="contactPhone" required />
         </div>
 
         <!-- Submit Button -->
-        <button type="submit" class="cta-button">Create Event</button>
+        <button type="submit" class="cta-button1">Create Event</button>
       </form>
     </div>
 
