--- a/views/find.html
+++ b/views/find.html
@@ -30,6 +30,15 @@
           <li><a href="/find-events">Find Events</a></li>
           <li><a href="/create-events">Create Events</a></li>
           <li><a href="/place ads">Ad Placement</a></li>
+          <li>
+            <a href="/signup">
+              <button class="butt cta-button ex1">Sign Up</button>
+            </a>
+            <a href="/login">
+              <button class="butt cta-button ex1">Login</button>
+            </a>
+            <button class="butt cta-button ex2">Log out</button>
+          </li>
         </ul>
       </nav>
       <div class="hamburger">
@@ -45,11 +54,12 @@
         <li><a class="navl" href="/place-ads">Ad Placement</a></li>
         <li>
           <a href="/signup">
-            <button class="butt cta-button ex whit">Sign Up</button>
+            <button class="butt cta-button ex1 whit">Sign Up</button>
           </a>
           <a href="/login">
-            <button class="butt cta-button ex whit">Login</button>
+            <button class="butt cta-button ex1 whit">Login</button>
           </a>
+          <button class="butt cta-button ex2">Log out</button>
         </li>
       </ul>
     </div>
@@ -60,7 +70,8 @@
         <div class="input-group">
           <label for="location">Location</label>
           <select id="location" name="location">
-            <option value="kaduna" selected>Kaduna</option>
+            <option value="" selected></option>
+            <option value="kaduna">Kaduna</option>
             <option value="lagos">Lagos</option>
             <option value="abuja">Abuja</option>
             <!-- Add more locations as needed -->
@@ -91,6 +102,18 @@
               ><input type="checkbox" name="categories" value="tech" />
               Technology</label
             >
+            <div class="input-group">
+              <label for="customCategory"
+                >Other Categories (seperate with coma ",")</label
+              >
+              <input
+                class="lma"
+                type="text"
+                id="customCategory"
+                name="customCategory"
+                placeholder="Specify other category"
+              />
+            </div>
           </div>
         </div>
 
@@ -106,23 +129,15 @@
               ><input type="checkbox" name="event-type" value="paid" />
               Paid</label
             >
-            <label
-              ><input type="checkbox" name="event-type" value="both" />
-              Both</label
-            >
           </div>
         </div>
 
         <!-- Organizer Needs -->
         <div class="input-group">
-          <label>Are organizers looking for donations or professionals?</label>
-          <div class="radio-group">
+          <div class="checkbox-group">
             <label
-              ><input type="radio" name="looking-for" value="no" checked />
-              No</label
-            >
-            <label
-              ><input type="radio" name="looking-for" value="yes" /> Yes</label
+              ><input type="checkbox" name="looking-for" value="true" /> Hiring
+              Events</label
             >
           </div>
         </div>
