--- a/views/signup.html
+++ b/views/signup.html
@@ -45,11 +45,12 @@
         <li><a class="navl" href="/place-ads">Ad Placement</a></li>
         <li>
           <a href="/signup">
-            <button class="butt cta-button ex whit">Sign Up</button>
+            <button class="butt cta-button ex1 whit">Sign Up</button>
           </a>
           <a href="/login">
-            <button class="butt cta-button ex whit">Login</button>
+            <button class="butt cta-button ex1 whit">Login</button>
           </a>
+          <button class="butt cta-button ex2">Log out</button>
         </li>
       </ul>
     </div>
@@ -59,7 +60,7 @@
       <div class="form-container">
         <h2>Create Your Account</h2>
         <p>Join EventGrid to discover and create amazing events.</p>
-        <form>
+        <form id="signup-form">
           <div class="input-group">
             <label for="name">Full Name</label>
             <input type="text" id="name" name="name" required />
@@ -72,12 +73,13 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required />
           </div>
-          <button type="submit" class="cta-button">Sign Up</button>
+          <button type="submit" class="cta-button1">Sign Up</button>
         </form>
 
         <p class="login-link">
           Already have an account? <a href="/login">Log in</a>
         </p>
+        <p class="error"></p>
       </div>
     </section>
 
@@ -124,5 +126,6 @@
     </footer>
 
     <script src="app.js"></script>
+    <script src="signup.js"></script>
   </body>
 </html>
